deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hexo
  labels:
    app: hexo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hexo
  template:
    metadata:
      labels:
        app: hexo
    spec:
      containers:
      - name: hexo
        image: gcr.io/k8s-project-283822/hexo:latest
        imagePullPolicy: Always
