service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hexo
  labels:
    app: hexo
spec:
  ports:
    - name: http
      port: 80
      targetPort: 4000
  selector:
    app: hexo
  type: ClusterIP
