ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-production"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - blog.claud.dev
    - claud.dev
    secretName: blog-tls
  rules:
  - host: blog.claud.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: hexo
          servicePort: 80
  - host: claud.dev
    http:
      paths:
      - path: /blog
        backend:
          serviceName: hexo
          servicePort: 80
